<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


        <ImageView
            android:id="@+id/account_logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/account"/>


        <LinearLayout
            android:id="@+id/create_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/account_logo">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/newAccountTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_name"
                            android:inputType="text"
                            android:imeOptions="actionNext"
                            android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/newAccountTextPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/account_phone"
                            android:imeActionId="0"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/create_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/account_create"
                    android:textColor="@color/white"
                    style="@style/Widget.AppCompat.Button.Colored"/>


        </LinearLayout>

</RelativeLayout>
